Bug 430150: During print-selection, use zoom ratio to scale y-position and height of selection, so that it doesn't get shifted too far when we move it to top of page.  r+sr=roc a1.9=damons